tdf#107255: detect whether the range has only one data cell.

(cherry picked from commit 93f5cb55349e6de5003182462bfee434dc51f6ad)

Conflicts:
	sc/inc/colcontainer.hxx

Change-Id: I4f67f15f95a428ea9068f706abc925ebfc835d39